# collision_model

./: .gitignore  CMakeLists.txt  README.md
include/: ball.h  mainwindow.h  texture.h
src/: ball.cpp  main.cpp  mainwindow.cpp  texture.cpp
